fix: toolbar being overlapped by card on large devices

--- a/src/app/pages/cards/pages/cards/cards.component.scss
+++ b/src/app/pages/cards/pages/cards/cards.component.scss
@@ -117,15 +117,6 @@
   z-index: 999;
 }
 
-.background {
-  @media #{$breakpoint-medium} {
-    z-index: 0;
-  }
-  @media #{$breakpoint-large} {
-    z-index: 0;
-  }
-}
-
 .card-width {
   @media #{$breakpoint-small} {
     width: 100%;
